[package]
name = "shiny-pcup-ranking-movie"
version = "0.1.0"
authors = ["TonalidadeHidrica <47710717+TonalidadeHidrica@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cairo-rs = { version = "0.9.1", features = ["png"] }
cairo-rs = { features = ["png"], path = "../cairo/" }
anyhow = "1.0.33"
sdl2 = "0.34.3"
